fix overflow for picker

--- a/src/css/_picker.css
+++ b/src/css/_picker.css
@@ -6,7 +6,6 @@ $fs: $text-3;
   @mixin font-size $fs;
 
   border-radius: calc(10em / $fs);
-  overflow: hidden;
   height: auto;
   position: fixed;
   top: 32%;
